# ar-slam-system

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
include/camera/: camera_interface.h  v4l2_camera.h
include/core/: feature_tracker.h  frame.h  geometry.h  incremental_mapper.h  log.h  memory_pool.h  reconstruction.h
include/rendering/: gl_viewer.h
src/: CMakeLists.txt  camera_3d_test.cpp  camera_test.cpp
src/core/: feature_tracker.cpp  frame.cpp  incremental_mapper.cpp  reconstruction.cpp
src/rendering/: gl_viewer.cpp
tests/: CMakeLists.txt  test_util.h
tests/benchmark/: benchmark_main.cpp  benchmark_realistic.cpp  performance_test.cpp
tests/unit/: memory_test.cpp  test_failure_modes.cpp  test_features.cpp  test_geometry.cpp  test_memory_pool.cpp  test_real_sequences.cpp  test_reconstruction.cpp  test_tracking.cpp
